--- a/Cedar App/res/layout/activity_display_map.xml
+++ b/Cedar App/res/layout/activity_display_map.xml
@@ -1,8 +1,25 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black" >
+<ScrollView 
+    	xmlns:android="http://schemas.android.com/apk/res/android"
+	    xmlns:tools="http://schemas.android.com/tools"
+	    android:background="@color/black"
+	    android:layout_width="fill_parent" 
+	    android:layout_height= "fill_parent">
 
 
-</RelativeLayout>
+
+	<RelativeLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal">
+	
+	    <ImageView 
+	        android:id="@+id/map"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:contentDescription="@string/map_description"
+	        android:src="@drawable/cedarpointmap"
+	        />
+	    
+	
+	</RelativeLayout>
+</ScrollView>
