--- a/Cedar App/res/layout/activity_display_map.xml
+++ b/Cedar App/res/layout/activity_display_map.xml
@@ -3,23 +3,24 @@
 	    xmlns:tools="http://schemas.android.com/tools"
 	    android:background="@color/black"
 	    android:layout_width="fill_parent" 
-	    android:layout_height= "fill_parent">
+	    android:layout_height= "fill_parent"
+	    >
 
 
 
 	<RelativeLayout 
-	    android:layout_width="match_parent"
+	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:orientation="horizontal">
 	
-	    <ImageView 
+	    <ImageView
 	        android:id="@+id/map"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
+	        android:layout_alignParentLeft="true"
+	        android:adjustViewBounds="true"
 	        android:contentDescription="@string/map_description"
-	        android:src="@drawable/cedarpointmap"
-	        />
-	    
+	        android:src="@drawable/cedarpointmap" />
 	
 	</RelativeLayout>
 </ScrollView>
