--- a/Cedar App/res/layout/activity_listof_rides.xml
+++ b/Cedar App/res/layout/activity_listof_rides.xml
@@ -29,9 +29,7 @@
 	        android:layout_height="wrap_content"
 	        android:textColor="@color/white"
 	        android:onClick="AddtoList"
-	        android:layout_alignParentRight="true"
-	        android:textOff="No"
-	        android:textOn="Yes" />
+	        android:layout_alignParentRight="true"/>
 	    
 	    <!-- Calypso -->
 	    <TextView
