--- a/Cedar App/res/layout/activity_listof_rides.xml
+++ b/Cedar App/res/layout/activity_listof_rides.xml
@@ -919,6 +919,7 @@
 	        
 	    
 	    <Button
+	        android:id="+id/map_button"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:text="@string/button_map"
