--- a/Cedar App/res/layout/activity_listof_rides.xml
+++ b/Cedar App/res/layout/activity_listof_rides.xml
@@ -3,7 +3,8 @@
 	    xmlns:tools="http://schemas.android.com/tools"
 	    android:background="@color/black"
 	    android:layout_width="fill_parent" 
-	    android:layout_height= "fill_parent">
+	    android:layout_height= "fill_parent"
+	    android:id="@+id/scroller">
 
 	<RelativeLayout 
 	    android:layout_width="match_parent"
@@ -919,7 +920,7 @@
 	        
 	    
 	    <Button
-	        android:id="+id/map_button"
+	        android:id="@+id/map_button"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:text="@string/button_map"
