--- a/Cedar App/res/layout/activity_display_map.xml
+++ b/Cedar App/res/layout/activity_display_map.xml
@@ -21,6 +21,13 @@
 	        android:adjustViewBounds="true"
 	        android:contentDescription="@string/map_description"
 	        android:src="@drawable/cedarpointmap" />
+	    
+	    <CheckBox
+	        android:id="@+id/blue_streak_button"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="10dp"
+	        android:layout_marginTop="10dp"/>
 	
 	</RelativeLayout>
 </ScrollView>
